# mana-monorepo

./: .dockerignore  .env.development  .env.example  .env.macmini.example  .env.secrets.example  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  APP-IDEAS.md  AUTH_ANALYSIS_SUMMARY.md  AUTH_ARCHITECTURE_REPORT.md  AUTH_DOCUMENTATION_INDEX.md  AUTH_QUICK_REFERENCE.md  AUTH_VALIDATION_CHECKLIST.md  BACKEND_DESIGN_PATTERN_AUDIT.md  CHANGELOG_2025-11-24.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_README.md  CLAUDE.md  COMMANDS.md  COMPATIBILITY_MATRIX_AND_REMEDIATION.md  DOCKER_REGISTRY_SETUP.md  FILES_CREATED.md  HISTORICAL-ANALYSIS.md  HIVE_MIND_FINAL_REPORT.md  JWT_VALIDATION_REPORT.md  MANACORE-TODOS.md  MERGE-FIX-SUMMARY.md  QA_TESTING_CHECKLIST.md  QUICK_START_CICD.md  README.md  RELEASE-PLAN.md  SHARED_PACKAGES_ROADMAP.md  SYNC_DEBUG.md  TESTING_STRATEGY_AUTH_CREDITS.md  TESTING_STRATEGY_EXECUTIVE_SUMMARY.md  TEST_CASES_SAMPLES.md  TROUBLESHOOTING.md  cloudflared-config.yml  (+20 more)
services/mana-llm/: .env.example  .gitignore  CLAUDE.md  Dockerfile  aliases.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  service.pyw  start.sh
services/mana-llm/src/: __init__.py  aliases.py  config.py  health.py  health_probe.py  main.py
services/mana-llm/src/models/: __init__.py  requests.py  responses.py
services/mana-llm/src/providers/: __init__.py  (+6 more)
services/mana-llm/tests/: __init__.py  test_aliases.py  test_api.py  test_health.py  test_health_probe.py  test_m4_observability.py  test_providers.py  test_router_fallback.py  test_streaming.py
(+17380 files in other folders)
